--- a/index.html
+++ b/index.html
@@ -3,10 +3,114 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Weather app</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/f20b002fa3.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="src/style.css"/>
 </head>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <body>
-    <h1>hello</h1>
+<div class="container">    
+<div class="weather-app">
+<div class="search-bar">
+<form id="search-form">
+    <div class="row">
+    <div class="col-8">
+<input type="search" name="search-bar" autofocus="off" placeholder="Enter city e.g. London" class="form-control"
+    id="input-search" /></div>
+    <div class="col-3">
+    <button type="submit" class="btn btn-primary search-button form-control">Search</button>
+    </div>
+    <div class="col-1"> 
+    <a href ="#">
+    <i class="fas fa-map-marker-alt" id="find-current-location"></i>
+    </a>
+</div>
+    </div>
+    </div>
+</form>
+</div>
+    <div class="row mainDay">
+        <div class="col-6">
+        <i class="fas fa-sun main-weather-icon"></i>
+        </div>
+        <div class="col-6">
+        <h1 id="display-City">London</h1>
+        <h2>
+
+       <span id="current-temperature"> 22
+           </span> 
+           <span class="units"> 
+            <a href="#" id="celsius">
+                °C</a> |
+            <a href="#" id="fahrenheit">
+                °F</a>
+            </span>
+           </h2>
+        <div id="current-conditions">
+             Sunny   
+        </div>
+        <div id="current-wind">
+            Wind: 5km/hr
+        </div>
+         <div id="current-humidity">
+            Humidity: 79%
+         </div>        
+        <div class="lastUpdated" >
+             Last updated: 
+                <span id="current-time">
+                 Sunday 20:00
+                </span>   
+        </div>
+           
+     </div>
+     </div>
+     <div class="row fiveDayForcast ">
+        <div class="col">
+            <i class="fas fa-sun sun-icon"></i>
+        </br>
+             Mon
+            </br>
+            <strong>24</strong>|16
+            </div>
+
+        <div class="col">
+            <i class="fas fa-sun sun-icon"></i>
+        </br>
+            Tues
+            </br>
+            <strong>26</strong>|17
+        </div>
+        <div class="col">
+            <i class="fas fa-cloud-sun-rain sun-rain-icon"></i>
+        </br>
+            Wed
+            </br>
+            <strong>21</strong>|14
+        </div>
+        <div class="col">
+            <i class="fas fa-cloud-showers-heavy rain-icon"></i>
+        </br>
+            Thurs
+            </br>
+            <strong>19</strong>|11
+        </div>
+        <div class="col">
+                <i class="fas fa-cloud-sun sun-cloud-icon"></i>
+        </br>
+            Fri
+            </br>
+            <strong>21</strong>|15
+        </div>
+        </div>
+    </div>
+    <script src="src/script.js"></script>
 </body>
 </html>
