Added github link to code

--- a/index.html
+++ b/index.html
@@ -111,6 +111,10 @@
         </div>
         </div>
     </div>
+    <div class="sign-off">
+    <a href="https://github.com/ilaug/weather-app-shecodes" target="_blank"> Open sourced code </a>
+     by Indiya Augustine
+    </div>
     <script src="src/script.js"></script>
 </body>
 </html>
