Correct typo in html text

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </div>
     </div>
     <div class="sign-off">
-    <a href="https://github.com/ilaug/weather-app-shecodes" target="_blank"> Open sourced code </a>
+    <a href="https://github.com/ilaug/weather-app-shecodes" target="_blank"> Open-source code </a>
      by Indiya Augustine
     </div>
     <script src="src/script.js"></script>
