--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                 °F</a>
             </span>
            </h2>
+           <div class=todays-conditions>
         <div id="current-conditions">
              Sunny   
         </div>
@@ -63,6 +64,7 @@
          <div id="current-humidity">
             Humidity: 79%
          </div>        
+         </div>
         <div class="lastUpdated" >
              Last updated: 
                 <span id="current-time">
@@ -72,7 +74,7 @@
            
      </div>
      </div>
-     <div class="row fiveDayForcast ">
+     <div class="row fiveDayForcast">
         <div class="col">
             <i class="fas fa-sun sun-icon"></i>
         </br>
@@ -112,8 +114,12 @@
         </div>
     </div>
     <div class="sign-off">
-    <a href="https://github.com/ilaug/weather-app-shecodes" target="_blank"> Open-source code </a>
-     by Indiya Augustine
+        This project was coded by 
+        <a href="https://www.linkedin.com/in/indiya-augustine-3aa64091/" target="_blank">Indiya Augustine</a>
+         and is open-sourced on 
+         <a href="https://github.com/ilaug/weather-app-shecodes" target="_blank">GitHub</a> 
+        and hosted on 
+        <a href="https://app.netlify.com/sites/wonderful-bardeen-efe4f9/overview" target="_blank">Netlify.</a>
     </div>
     <script src="src/script.js"></script>
 </body>
