main weather icon js

--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
 </div>
     <div class="row mainDay">
         <div class="col-6">
-        <i class="fas fa-sun main-weather-icon"></i>
+        <div>
+            <img 
+            src="" alt="" id="main-weather-icon" calss="float-left"/>
+            </div>
         </div>
         <div class="col-6">
         <h1 id="display-City">London</h1>
