--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
        <span id="current-temperature"> 22
            </span> 
            <span class="units"> 
-            <a href="#" id="celsius">
+            <a href="#" id="celsius-link" class="active">
                 °C</a> |
-            <a href="#" id="fahrenheit">
+            <a href="#" id="fahrenheit-link">
                 °F</a>
             </span>
            </h2>
