Updating 5 day forcast HTML and CSS

--- a/index.html
+++ b/index.html
@@ -78,44 +78,22 @@
      </div>
      </div>
      <div class="row fiveDayForcast">
-        <div class="col">
-            <i class="fas fa-sun sun-icon"></i>
-        </br>
-             Mon
-            </br>
-            <strong>24</strong>|16
+        <div class="col-2">
+            <div class="fiveDayForcast-day">
+                Mon
             </div>
-
-        <div class="col">
-            <i class="fas fa-sun sun-icon"></i>
-        </br>
-            Tues
-            </br>
-            <strong>26</strong>|17
-        </div>
-        <div class="col">
-            <i class="fas fa-cloud-sun-rain sun-rain-icon"></i>
-        </br>
-            Wed
-            </br>
-            <strong>21</strong>|14
-        </div>
-        <div class="col">
-            <i class="fas fa-cloud-showers-heavy rain-icon"></i>
-        </br>
-            Thurs
-            </br>
-            <strong>19</strong>|11
-        </div>
-        <div class="col">
-                <i class="fas fa-cloud-sun sun-cloud-icon"></i>
-        </br>
-            Fri
-            </br>
-            <strong>21</strong>|15
-        </div>
+        <i class="fas fa-sun sun-icon"></i>
+        <div class=fiveDayForcast-temperatures>
+        <span class="fiveDayForcast-temp-max">
+            24
+        </span>
+        <span class="fiveDayForcast-temp-min">
+            16
+        </span>
         </div>
     </div>
+    </div>
+
     <div class="sign-off">
         This project was coded by 
         <a href="https://www.linkedin.com/in/indiya-augustine-3aa64091/" target="_blank">Indiya Augustine</a>
