5 day forcast JS

--- a/index.html
+++ b/index.html
@@ -77,21 +77,7 @@
            
      </div>
      </div>
-     <div class="row fiveDayForcast">
-        <div class="col-2">
-            <div class="fiveDayForcast-day">
-                Mon
-            </div>
-        <i class="fas fa-sun sun-icon"></i>
-        <div class=fiveDayForcast-temperatures>
-        <span class="fiveDayForcast-temp-max">
-            24
-        </span>
-        <span class="fiveDayForcast-temp-min">
-            16
-        </span>
-        </div>
-    </div>
+     <div class="fiveDayForcast" id=forcast>
     </div>
 
     <div class="sign-off">
