Correct forecast spelling

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
            
      </div>
      </div>
-     <div class="fiveDayForcast" id=forcast>
+     <div class="fiveDayForecast" id=forecast>
     </div>
 
     <div class="sign-off">
