--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="row">
     <div class="col-8">
 <input type="search" name="search-bar" autofocus="off" placeholder="Enter city e.g. London" class="form-control"
-    id="input-search" /></div>
+    id="input-search"></div>
     <div class="col-3">
     <button type="submit" class="btn btn-primary search-button form-control">Search</button>
     </div>
