--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="col-6">
         <div>
             <img 
-            src="" alt="" id="main-weather-icon" calss="float-left"/>
+            src="" alt="" id="main-weather-icon"/>
             </div>
         </div>
         <div class="col-6">
