Styling tweaks - font sizing

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
         <div class="col-6">
         <div>
             <img 
-            src="" alt="" id="main-weather-icon"/>
+            src="" width="130px" alt="" id="main-weather-icon"/>
+            
             </div>
         </div>
         <div class="col-6">
@@ -78,6 +79,7 @@
      </div>
      </div>
      <div class="fiveDayForecast" id=forecast>
+    </div>
     </div>
 
     <div class="sign-off">
